flexes.output
Terminals unused in grammar

   TINTEGER
   TDOUBLE
   TSTRING
   TCOMMA
   TSCOLON
   TPLUS
   TMINUS
   TMUL
   TDIV
   TOR
   TNOT
   NL


State 7 conflicts: 3 shift/reduce
State 18 conflicts: 1 reduce/reduce
State 39 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: rule program_ext action
    2        | question program_ext action

    3 program_ext: /* empty */
    4            | rule
    5            | question
    6            | rule rule
    7            | rule question
    8            | question rule
    9            | question question

   10 rule: TRULE ident stmts TDOT

   11 question: TQUESTION ident question_block TDOT

   12 question_block: TSENTENCE TQEND TINPUT ident TSTOP
   13               | TSENTENCE TQEND TINPUT ident TQEND TBECAUSE TSENTENCE TSTOP

   14 action: TACTION ident stmts TDOT

   15 stmts: stmt
   16      | stmt stmt

   17 stmt: /* empty */
   18     | if_stmt
   19     | TDO TASK ident
   20     | write

   21 if_stmt: TIF expr TTHEN expr
   22        | TIF ident TIS ident

   23 expr: ident TIS UNKNOWN
   24     | ident TIS ident
   25     | ident TBECOMES ident
   26     | ident CMP ident
   27     | TAND expr

   28 write: TWRITE TLPAREN ident TRPAREN
   29      | TWRITE TLPAREN '\'' ' ' '\'' TRPAREN

   30 ident: TIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
' ' (32) 29
'\'' (39) 29
error (256)
TRULE (258) 10
TACTION (259) 14
TQUESTION (260) 11
TINTEGER (261)
TDOUBLE (262)
TIDENTIFIER (263) 30
TSENTENCE (264) 12 13
TSTRING (265)
TCOMMA (266)
TDOT (267) 10 11 14
TSCOLON (268)
TSTOP (269) 12 13
TQEND (270) 12 13
TPLUS (271)
TMINUS (272)
TMUL (273)
TDIV (274)
TIF (275) 21 22
TTHEN (276) 21
TIS (277) 22 23 24
TBECOMES (278) 25
TAND (279) 27
TOR (280)
TNOT (281)
TDO (282) 19
TASK (283) 19
TBECAUSE (284) 13
TINPUT (285) 12 13
TWRITE (286) 28 29
TLPAREN (287) 28 29
TRPAREN (288) 28 29
NL (289)
UNKNOWN (290) 23
CMP (291) 26


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1 2, on right: 0
program_ext (41)
    on left: 3 4 5 6 7 8 9, on right: 1 2
rule (42)
    on left: 10, on right: 1 4 6 7 8
question (43)
    on left: 11, on right: 2 5 7 8 9
question_block (44)
    on left: 12 13, on right: 11
action (45)
    on left: 14, on right: 1 2
stmts (46)
    on left: 15 16, on right: 10 14
stmt (47)
    on left: 17 18 19 20, on right: 15 16
if_stmt (48)
    on left: 21 22, on right: 18
expr (49)
    on left: 23 24 25 26 27, on right: 21 27
write (50)
    on left: 28 29, on right: 20
ident (51)
    on left: 30, on right: 10 11 12 13 14 19 22 23 24 25 26 28


state 0

    0 $accept: . program $end

    TRULE      shift, and go to state 1
    TQUESTION  shift, and go to state 2

    program   go to state 3
    rule      go to state 4
    question  go to state 5


state 1

   10 rule: TRULE . ident stmts TDOT

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 7


state 2

   11 question: TQUESTION . ident question_block TDOT

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 8


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: rule . program_ext action

    TRULE      shift, and go to state 1
    TQUESTION  shift, and go to state 2

    $default  reduce using rule 3 (program_ext)

    program_ext  go to state 10
    rule         go to state 11
    question     go to state 12


state 5

    2 program: question . program_ext action

    TRULE      shift, and go to state 1
    TQUESTION  shift, and go to state 2

    $default  reduce using rule 3 (program_ext)

    program_ext  go to state 13
    rule         go to state 11
    question     go to state 12


state 6

   30 ident: TIDENTIFIER .

    $default  reduce using rule 30 (ident)


state 7

   10 rule: TRULE ident . stmts TDOT

    TIF     shift, and go to state 14
    TDO     shift, and go to state 15
    TWRITE  shift, and go to state 16

    TIF       [reduce using rule 17 (stmt)]
    TDO       [reduce using rule 17 (stmt)]
    TWRITE    [reduce using rule 17 (stmt)]
    $default  reduce using rule 17 (stmt)

    stmts    go to state 17
    stmt     go to state 18
    if_stmt  go to state 19
    write    go to state 20


state 8

   11 question: TQUESTION ident . question_block TDOT

    TSENTENCE  shift, and go to state 21

    question_block  go to state 22


state 9

    0 $accept: program $end .

    $default  accept


state 10

    1 program: rule program_ext . action

    TACTION  shift, and go to state 23

    action  go to state 24


state 11

    4 program_ext: rule .
    6            | rule . rule
    7            | rule . question

    TRULE      shift, and go to state 1
    TQUESTION  shift, and go to state 2

    $default  reduce using rule 4 (program_ext)

    rule      go to state 25
    question  go to state 26


state 12

    5 program_ext: question .
    8            | question . rule
    9            | question . question

    TRULE      shift, and go to state 1
    TQUESTION  shift, and go to state 2

    $default  reduce using rule 5 (program_ext)

    rule      go to state 27
    question  go to state 28


state 13

    2 program: question program_ext . action

    TACTION  shift, and go to state 23

    action  go to state 29


state 14

   21 if_stmt: TIF . expr TTHEN expr
   22        | TIF . ident TIS ident

    TIDENTIFIER  shift, and go to state 6
    TAND         shift, and go to state 30

    expr   go to state 31
    ident  go to state 32


state 15

   19 stmt: TDO . TASK ident

    TASK  shift, and go to state 33


state 16

   28 write: TWRITE . TLPAREN ident TRPAREN
   29      | TWRITE . TLPAREN '\'' ' ' '\'' TRPAREN

    TLPAREN  shift, and go to state 34


state 17

   10 rule: TRULE ident stmts . TDOT

    TDOT  shift, and go to state 35


state 18

   15 stmts: stmt .
   16      | stmt . stmt

    TIF     shift, and go to state 14
    TDO     shift, and go to state 15
    TWRITE  shift, and go to state 16

    TDOT      reduce using rule 15 (stmts)
    TDOT      [reduce using rule 17 (stmt)]
    $default  reduce using rule 15 (stmts)

    stmt     go to state 36
    if_stmt  go to state 19
    write    go to state 20


state 19

   18 stmt: if_stmt .

    $default  reduce using rule 18 (stmt)


state 20

   20 stmt: write .

    $default  reduce using rule 20 (stmt)


state 21

   12 question_block: TSENTENCE . TQEND TINPUT ident TSTOP
   13               | TSENTENCE . TQEND TINPUT ident TQEND TBECAUSE TSENTENCE TSTOP

    TQEND  shift, and go to state 37


state 22

   11 question: TQUESTION ident question_block . TDOT

    TDOT  shift, and go to state 38


state 23

   14 action: TACTION . ident stmts TDOT

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 39


state 24

    1 program: rule program_ext action .

    $default  reduce using rule 1 (program)


state 25

    6 program_ext: rule rule .

    $default  reduce using rule 6 (program_ext)


state 26

    7 program_ext: rule question .

    $default  reduce using rule 7 (program_ext)


state 27

    8 program_ext: question rule .

    $default  reduce using rule 8 (program_ext)


state 28

    9 program_ext: question question .

    $default  reduce using rule 9 (program_ext)


state 29

    2 program: question program_ext action .

    $default  reduce using rule 2 (program)


state 30

   27 expr: TAND . expr

    TIDENTIFIER  shift, and go to state 6
    TAND         shift, and go to state 30

    expr   go to state 40
    ident  go to state 41


state 31

   21 if_stmt: TIF expr . TTHEN expr

    TTHEN  shift, and go to state 42


state 32

   22 if_stmt: TIF ident . TIS ident
   23 expr: ident . TIS UNKNOWN
   24     | ident . TIS ident
   25     | ident . TBECOMES ident
   26     | ident . CMP ident

    TIS       shift, and go to state 43
    TBECOMES  shift, and go to state 44
    CMP       shift, and go to state 45


state 33

   19 stmt: TDO TASK . ident

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 46


state 34

   28 write: TWRITE TLPAREN . ident TRPAREN
   29      | TWRITE TLPAREN . '\'' ' ' '\'' TRPAREN

    TIDENTIFIER  shift, and go to state 6
    '\''         shift, and go to state 47

    ident  go to state 48


state 35

   10 rule: TRULE ident stmts TDOT .

    $default  reduce using rule 10 (rule)


state 36

   16 stmts: stmt stmt .

    $default  reduce using rule 16 (stmts)


state 37

   12 question_block: TSENTENCE TQEND . TINPUT ident TSTOP
   13               | TSENTENCE TQEND . TINPUT ident TQEND TBECAUSE TSENTENCE TSTOP

    TINPUT  shift, and go to state 49


state 38

   11 question: TQUESTION ident question_block TDOT .

    $default  reduce using rule 11 (question)


state 39

   14 action: TACTION ident . stmts TDOT

    TIF     shift, and go to state 14
    TDO     shift, and go to state 15
    TWRITE  shift, and go to state 16

    TIF       [reduce using rule 17 (stmt)]
    TDO       [reduce using rule 17 (stmt)]
    TWRITE    [reduce using rule 17 (stmt)]
    $default  reduce using rule 17 (stmt)

    stmts    go to state 50
    stmt     go to state 18
    if_stmt  go to state 19
    write    go to state 20


state 40

   27 expr: TAND expr .

    $default  reduce using rule 27 (expr)


state 41

   23 expr: ident . TIS UNKNOWN
   24     | ident . TIS ident
   25     | ident . TBECOMES ident
   26     | ident . CMP ident

    TIS       shift, and go to state 51
    TBECOMES  shift, and go to state 44
    CMP       shift, and go to state 45


state 42

   21 if_stmt: TIF expr TTHEN . expr

    TIDENTIFIER  shift, and go to state 6
    TAND         shift, and go to state 30

    expr   go to state 52
    ident  go to state 41


state 43

   22 if_stmt: TIF ident TIS . ident
   23 expr: ident TIS . UNKNOWN
   24     | ident TIS . ident

    TIDENTIFIER  shift, and go to state 6
    UNKNOWN      shift, and go to state 53

    ident  go to state 54


state 44

   25 expr: ident TBECOMES . ident

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 55


state 45

   26 expr: ident CMP . ident

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 56


state 46

   19 stmt: TDO TASK ident .

    $default  reduce using rule 19 (stmt)


state 47

   29 write: TWRITE TLPAREN '\'' . ' ' '\'' TRPAREN

    ' '  shift, and go to state 57


state 48

   28 write: TWRITE TLPAREN ident . TRPAREN

    TRPAREN  shift, and go to state 58


state 49

   12 question_block: TSENTENCE TQEND TINPUT . ident TSTOP
   13               | TSENTENCE TQEND TINPUT . ident TQEND TBECAUSE TSENTENCE TSTOP

    TIDENTIFIER  shift, and go to state 6

    ident  go to state 59


state 50

   14 action: TACTION ident stmts . TDOT

    TDOT  shift, and go to state 60


state 51

   23 expr: ident TIS . UNKNOWN
   24     | ident TIS . ident

    TIDENTIFIER  shift, and go to state 6
    UNKNOWN      shift, and go to state 53

    ident  go to state 61


state 52

   21 if_stmt: TIF expr TTHEN expr .

    $default  reduce using rule 21 (if_stmt)


state 53

   23 expr: ident TIS UNKNOWN .

    $default  reduce using rule 23 (expr)


state 54

   22 if_stmt: TIF ident TIS ident .
   24 expr: ident TIS ident .

    TTHEN     reduce using rule 24 (expr)
    $default  reduce using rule 22 (if_stmt)


state 55

   25 expr: ident TBECOMES ident .

    $default  reduce using rule 25 (expr)


state 56

   26 expr: ident CMP ident .

    $default  reduce using rule 26 (expr)


state 57

   29 write: TWRITE TLPAREN '\'' ' ' . '\'' TRPAREN

    '\''  shift, and go to state 62


state 58

   28 write: TWRITE TLPAREN ident TRPAREN .

    $default  reduce using rule 28 (write)


state 59

   12 question_block: TSENTENCE TQEND TINPUT ident . TSTOP
   13               | TSENTENCE TQEND TINPUT ident . TQEND TBECAUSE TSENTENCE TSTOP

    TSTOP  shift, and go to state 63
    TQEND  shift, and go to state 64


state 60

   14 action: TACTION ident stmts TDOT .

    $default  reduce using rule 14 (action)


state 61

   24 expr: ident TIS ident .

    $default  reduce using rule 24 (expr)


state 62

   29 write: TWRITE TLPAREN '\'' ' ' '\'' . TRPAREN

    TRPAREN  shift, and go to state 65


state 63

   12 question_block: TSENTENCE TQEND TINPUT ident TSTOP .

    $default  reduce using rule 12 (question_block)


state 64

   13 question_block: TSENTENCE TQEND TINPUT ident TQEND . TBECAUSE TSENTENCE TSTOP

    TBECAUSE  shift, and go to state 66


state 65

   29 write: TWRITE TLPAREN '\'' ' ' '\'' TRPAREN .

    $default  reduce using rule 29 (write)


state 66

   13 question_block: TSENTENCE TQEND TINPUT ident TQEND TBECAUSE . TSENTENCE TSTOP

    TSENTENCE  shift, and go to state 67


state 67

   13 question_block: TSENTENCE TQEND TINPUT ident TQEND TBECAUSE TSENTENCE . TSTOP

    TSTOP  shift, and go to state 68


state 68

   13 question_block: TSENTENCE TQEND TINPUT ident TQEND TBECAUSE TSENTENCE TSTOP .

    $default  reduce using rule 13 (question_block)
